Pull request #284: fix/AG-7899 fix modal
Merge in EXTENSIONS/vpn-extension from fix/AG-7899 to master

Squashed commit of the following:

commit f62c98abdf1054cea06d2139aa4935aff3decf09
Author: anton <a.kaprielov@adguard.com>
Date:   Tue Apr 27 15:30:49 2021 +0300

    fix/AG-7899

commit 39dcaab1de545ffdc99f88c6fc8727f2d8d943b5
Author: anton <a.kaprielov@adguard.com>
Date:   Tue Apr 27 12:51:16 2021 +0300

    fix/AG-7899 fix modal

--- a/src/options/components/Exclusions/settings.pcss
+++ b/src/options/components/Exclusions/settings.pcss
@@ -133,12 +133,11 @@
     }
 
     &__title {
-        font-weight: 400;
-        font-size: 40px;
         letter-spacing: 0;
-        line-height: 48px;
         margin-bottom: 8px;
         text-align: center;
+        font-size: 28px;
+        line-height: 30px;
     }
 
     &__message {
@@ -155,7 +154,7 @@
     &__button {
         height: 44px;
         padding: 0 10px;
-        width: 200px;
+        min-width: 220px;
         border: 1px solid var(--gray88);
         border-radius: 8px;
         font-size: 16px;
